@@ -1,5 +1,10 @@
 2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* src/GiverMenuItem.cs: Fixed the banter-44 icon to be giver-44
+	* src/Application.cs: Fixed up icon so it's off if nobody is there
+
+2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* src/GiverMenuItem.cs: Updated the alignment of the menu items
 
 2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 
